# code-index-mcp

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CHANGELOG_EN.md  Cargo.toml  Code_Index_MCP_TZ_v2.md  README.md  README_RU.md  server.json
.cargo/: config.toml
.github/workflows/: publish-registry.yml  release.yml
crates/bsl-extension/: Cargo.toml
crates/bsl-extension/src/: code_usages.rs  index_extras.rs  lib.rs  parse_collector.rs  processor.rs  schema.rs
crates/bsl-extension/src/tools/: bsl_sql.rs  find_data_path.rs  find_path.rs  find_path_bsl.rs  find_references.rs  get_data_links.rs  get_event_subscriptions.rs  get_form_handlers.rs  get_object_profile.rs  get_object_structure.rs  get_register_writers.rs  mod.rs  search_terms.rs
crates/bsl-extension/src/xml/: config_dump_info.rs  configuration.rs  edt_mdo.rs  event_subscriptions.rs  metadata_refs.rs  mod.rs  object_attributes.rs  object_uuid.rs
crates/bsl-extension/tests/: tools_integration.rs
crates/bsl-indexer/: Cargo.toml
crates/bsl-parse/: Cargo.toml
crates/bsl-parse/src/: lib.rs
crates/code-index/: Cargo.toml
crates/code-index-core/: Cargo.toml
crates/code-index-core/src/: cli.rs  lib.rs
crates/code-index-core/src/daemon_core/: cache_client.rs  client.rs  config.rs  lock.rs  mod.rs  runner.rs  worker.rs
crates/code-index-core/src/extension/: context.rs  mod.rs  processor.rs
crates/code-index-core/src/federation/: client.rs  config.rs  dispatcher.rs  repos.rs  server.rs  whitelist.rs
crates/code-index-core/src/indexer/: file_types.rs  hasher.rs  mod.rs
crates/code-index-core/src/mcp/: config_watch.rs  mod.rs  tools.rs
crates/code-index-core/src/parser/: bsl.rs  mod.rs
crates/code-index-core/src/storage/: mod.rs  models.rs  schema.rs
deploy/docker/: Dockerfile  README.md  daemon.toml  docker-compose.yml  entrypoint.sh
docs/: PROGRAM_OVERVIEW.md  bsl-indexer.md  deploy-vm-rag.md  operations.md
docs/фоновый-демон-индексации/: brief.md
npm/: package.json
src/: daemon.rs  lib.rs  main.rs  pidlock.rs  watcher.rs
src/daemon_core/: config.rs  mod.rs  runner.rs  server.rs  worker.rs
src/indexer/: config.rs  file_types.rs  mod.rs
src/mcp/: mod.rs  tools.rs
src/parser/: bsl.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  types.rs  typescript.rs  xml_1c.rs
src/storage/: mod.rs  models.rs  schema.rs
target2/: .rustc_info.json
target2/release/: code-index.d  libcode_index_mcp.d  libcode_index_mcp.rlib
target2/release/.fingerprint/aho-corasick-d1da2da17e4b20a6/: lib-aho_corasick  lib-aho_corasick.json
target2/release/.fingerprint/anstream-eca3f6a759191240/: lib-anstream  lib-anstream.json
target2/release/.fingerprint/anstyle-ef3865ad7fb9f33f/: lib-anstyle  lib-anstyle.json
target2/release/.fingerprint/anstyle-parse-b84a521f5fb918a8/: lib-anstyle_parse  lib-anstyle_parse.json
target2/release/.fingerprint/anstyle-query-2e5f1f43cda6ba91/: lib-anstyle_query  lib-anstyle_query.json
target2/release/.fingerprint/anstyle-wincon-5b38d81c237b7bf5/: lib-anstyle_wincon  lib-anstyle_wincon.json
target2/release/.fingerprint/anyhow-986caf58091978a2/: build-script-build-script-build  build-script-build-script-build.json
target2/release/.fingerprint/anyhow-a11c1e2bfe7bcf0f/: run-build-script-build-script-build  run-build-script-build-script-build.json
target2/release/.fingerprint/anyhow-afe99f9b3abc4778/: lib-anyhow  lib-anyhow.json
target2/release/.fingerprint/async-trait-14bfb2ccbdcce374/: lib-async_trait  lib-async_trait.json
target2/release/.fingerprint/autocfg-bb4a6c73843b6503/: lib-autocfg  lib-autocfg.json
(+426 files in other folders)
