[package]
name = "code-index-mcp"
version = "0.1.2"
edition = "2021"
description = "Высокопроизводительный индексатор кода с MCP-протоколом для AI-моделей"
license = "MIT"

[[bin]]
name = "code-index"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# MCP протокол
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }

# Парсинг AST
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-onescript = "0.1"
tree-sitter-go = "0.23"

# XML-парсинг (для выгрузок 1С)
quick-xml = "0.37"

# База данных
rusqlite = { version = "0.39", features = ["bundled", "backup"] }

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Файловая система
walkdir = "2"
rayon = "1.10"
notify = "7"
notify-debouncer-full = "0.4"

# Хеширование
sha2 = "0.10"

# Обработка ошибок
anyhow = "1"
thiserror = "2"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Системная информация (RAM для in-memory решения)
sysinfo = "0.32"

# Утилиты
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[[bench]]
name = "parse_benchmark"
harness = false
